<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/EuroSCRButton"
        android:text="@string/name_euroscore_2"
        style="@style/ButtonStyle" />

    <Button
        android:id="@+id/HbPerfButton"
        style="@style/ButtonStyle"
        android:text="@string/name_hb_on_perfusion" />

    <Button
        android:id="@+id/BSAButton"
        style="@style/ButtonStyle"
        android:text="@string/name_perfusion_calculator" />

    <Button
        android:id="@+id/OxyButton"
        style="@style/ButtonStyle"
        android:text="@string/name_oxygen_delivery" />

    <Button
        android:id="@+id/CKDButton"
        style="@style/ButtonStyle"
        android:text="@string/name_glomerular_filtration_rate" />

    <Button
        android:id="@+id/idealbodymassbutton"
        style="@style/ButtonStyle"
        android:text="@string/name_ideal_body_mass" />

    <Button
        android:id="@+id/bt_bsa"
        style="@style/ButtonStyle"
        android:text="@string/name_body_surface_area" />

    <Button
        android:id="@+id/bt_respiratory_index"
        style="@style/ButtonStyle"
        android:text="@string/name_oxygenation_params" />

    <Button
        android:id="@+id/bt_mehran_score"
        style="@style/ButtonStyle"
        android:text="@string/name_mehran_score" />


</LinearLayout>