<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".calcsfragments.GFR">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="232dp"
        android:text="@string/Sex"
        />
    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
       >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Female" />
    </RadioGroup>
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:hint="@string/age"
            android:layout_margin="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_age_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/creatinine"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:hint="@string/creatinine"
            android:orientation="vertical"
            android:layout_margin="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_creatinine_field_gfr_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/creatinineClearance"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/tw_result_gfr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="20sp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>